[tool.poetry]
name = "student-management-system"
version = "0.1.0"
description = ""
authors = ["Łukasz Kuk <lukasz010420@gmail.com>"]
readme = "README.md"
packages = [{include = "student_management_system"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
